logs/dag_id=user_table/run_id=manual__2022-06-15T09:30:34.689320+00:00/task_id=create_table/attempt=3.log
[2022-06-15 09:48:05,783] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:48:05,816] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [queued]>
[2022-06-15 09:48:05,817] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:48:05,820] {taskinstance.py:1357} INFO - Starting attempt 3 of 4
[2022-06-15 09:48:05,825] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-15 09:48:05,874] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_table> on 2022-06-15 09:30:34.689320+00:00
[2022-06-15 09:48:05,886] {standard_task_runner.py:52} INFO - Started process 11187 to run task
[2022-06-15 09:48:05,908] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'user_table', 'create_table', 'manual__2022-06-15T09:30:34.689320+00:00', '--job-id', '97', '--raw', '--subdir', 'DAGS_FOLDER/user.py', '--cfg-path', '/tmp/tmpzvc85rq1', '--error-file', '/tmp/tmp0abhy0v0']
[2022-06-15 09:48:05,910] {standard_task_runner.py:80} INFO - Job 97: Subtask create_table
[2022-06-15 09:48:06,092] {task_command.py:370} INFO - Running <TaskInstance: user_table.create_table manual__2022-06-15T09:30:34.689320+00:00 [running]> on host cfddca254c64
[2022-06-15 09:48:06,422] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_table
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-15T09:30:34.689320+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-15T09:30:34.689320+00:00
[2022-06-15 09:48:06,443] {base.py:68} INFO - Using connection ID 'testing' for task execution.
[2022-06-15 09:48:06,463] {dbapi.py:213} INFO - Running statement: 
        DROP TABLE IF EXISTS z1_user;
        CREATE TABLE z1_user(
            name VARCHAR(255),
            phonenumber VARCHAR(255),
            email NOT NULL TEXT PRIMARY KEY,
            address VARCHAR(255),
            work VARCHAR(255),
            other VARCHAR(255),
        ) 
        , parameters: None
[2022-06-15 09:48:06,477] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "NOT"
LINE 6:             email NOT NULL TEXT PRIMARY KEY,
                          ^

[2022-06-15 09:48:06,510] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=user_table, task_id=create_table, execution_date=20220615T093034, start_date=20220615T094805, end_date=20220615T094806
[2022-06-15 09:48:06,547] {standard_task_runner.py:97} ERROR - Failed to execute job 97 for task create_table (syntax error at or near "NOT"
LINE 6:             email NOT NULL TEXT PRIMARY KEY,
                          ^
; 11187)
[2022-06-15 09:48:06,579] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-15 09:48:06,706] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
